--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.64.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^8.46.0",
+    "eslint-plugin-react": "^7.33.1",
     "vite": "^4.0.0"
   }
 }
